--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 						</a>
 					</li>
 					<li>
-						<a href="liyingying0411.github.io/glsx/index.html" rel="title" class="b-link-stripe b-animate-go  thickbox" target='_blank'>
+						<a href="https://liyingying0411.github.io/glsx/index.html" rel="title" class="b-link-stripe b-animate-go  thickbox" target='_blank'>
 							<img src="images/glsx.png" alt="" />
 							<div>
 								<h5>点击查看</h5>
