--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 		<meta name="keywords" content="Peak Responsive web template, Bootstrap Web Templates, Flat Web Templates, Andriod Compatible web template, 
 		Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, SonyErricsson, Motorola web design" />
-		<script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
+		<script type="application/x-javascript"> 
+		addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
 	<!-- //for-mobile-apps -->	
 	<!-- js -->
 		<script type="text/javascript" src="js/jquery.min.js"></script>
@@ -57,7 +58,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 									<li><a class="scroll" href="#home">在下</a></li>
 									<li><a class="scroll" href="#about">关于我</a></li>
 									<li><a class="scroll" href="#portfolio">我的作品</a></li>
-									<li><a class="scroll" href="#services">我的技能</a></li>
+									<!-- <li><a class="scroll" href="#services">我的技能</a></li> -->
 									<li><a class="scroll" href="#contact">联系我</a></li>
 								</ul>
 							</nav>
@@ -154,7 +155,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 										radius:     80,
 										width:      10,
 										number:   	percentage / 10,
-										text:       '%',
+										text:       '+',
 										colors:     colors[i - 1]
 									});
 								}
