--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					</div>
 					<div class="col-md-3 skills-grid text-center">
 						<div class="circle" id="circles-4"></div>
-						<p>HTML/CSS</p>
+						<p>HTML(html5)/CSS(css3)</p>
 					</div>
 					<div class="clearfix"> </div>
 				 <script type="text/javascript" src="js/circles.js"></script>
