--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				<div class="clearfix"></div>
 			</div>
 			<div class="col-md-8 banner-image text-center">
-				<img src="images/1.jpg" alt=""/>
+				<img src="images/1a.jpg" alt=""/>
 			</div>
 			<div class="clearfix"></div>
 		</div>
@@ -289,7 +289,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 			</div>
 			<div class="col-md-4 contact-grid text-center">
 				<div class="point-icon"><span class="glyphicon glyphicon-envelope" aria-hidden="true"></span></div>
-				<p><a href="mailto:info@example.com">422037183@qq.com</a></p>
+				<p><a href="mailto:info@example.com">17703478705@163.com</a></p>
 			</div>
 			<div class="col-md-4 contact-grid text-center">
 				<div class="point-icon"><span class="glyphicon glyphicon-earphone" aria-hidden="true"></span></div>
