--- a/index.html
+++ b/index.html
@@ -284,7 +284,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 		<div class="contact-grids">
 			<div class="box">联系我</div>
 			<div class="col-md-4 contact-grid text-center">
-				<div class="point-icon"><span class="glyphicon glyphicon-map-marker" aria-hidden="true"></span></div>
+				<div class="point-icon"><span class="glyphicon glyphicon-map-marker" aria-hidden="true"></span>
+				</div>
 				<p>现居住地：北京</p>
 			</div>
 			<div class="col-md-4 contact-grid text-center">
